# NextRound---AI-mock-interview-platform

./: .gitignore  README.md  interview_system_guide.md  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0857b1fdd394_create_interview_blueprint_and_session_.py  18cf2ef97def_create_resume_domain.py  19dba044cbdc_create_interview_turn_analysis.py  1a091967f098_add_code_execution_infrastructure.py  22354c477edb_create_interview_domain.py  402b9840e5de_add_resume_metadata_columns.py  77ce907f0b19_create_coding_problem_and_language_.py  b7d9a92d5f43_create_users_table.py  c3cd880fc417_create_interview_evaluation_table.py  c6964af27375_add_uppercase_enum_values_to_.py  e1e152c0fb38_add_interview_messages_and_state.py  eeefd655f007_create_candidate_profiles_table.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  state.py
backend/app/api/: __init__.py
backend/app/core/: config.py  dependencies.py  exceptions.py  lifespan.py  logging.py  observability.py  security.py  storage.py
backend/app/db/: __init__.py  base.py  base_models.py  session.py
backend/app/dependencies/: __init__.py  providers.py
backend/app/llm/: __init__.py  base.py  factory.py  orchestrator.py  registry.py
backend/app/models/: __init__.py
backend/configs/: llm_profiles.yaml
backend/docs/: evaluation_engine_guide.md
backend/tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_auth_service.py  test_coding_foundation.py  test_execution_infrastructure.py  test_interview_conversation.py  test_interview_intelligence.py  test_interview_session.py  test_llm_orchestrator.py  test_resume_confirmation.py  test_resume_parser.py  test_resume_upload.py  test_security.py
(+232 files in other folders)
