[project]
name = "nextround-backend"
version = "0.1.0"
description = "AI-powered interview operating system backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.6.4",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "redis>=5.0.3",
    "litellm==1.45.0",
    "structlog>=24.1.0",
    "alembic>=1.13.1",
    "pwdlib[argon2]>=0.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
